--- a/Project#1 (calculator)/გვერდი-მათემატიკა/math.css
+++ b/Project#1 (calculator)/გვერდი-მათემატიკა/math.css
@@ -9,18 +9,20 @@
   h4 {
     font-weight: 900;
   }
-  
   body {
-    background: rgba(252, 208, 122, 1);
-    font-weight: 300;
-    margin: 0;
-  }
-  
+    background-image: url("unnamed.jpg");
+    background-color: #cccccc;
+   }
   .wrapper {
     width: 100%;
   }
   
+  .goback {
+    width: 50px;
+  }
+
   .calc {
+    margin-top: 80px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -68,7 +70,7 @@
   .keyboard {
     max-width: 400px;
     width: 100%;
-    box-shadow: inset 10px -88px 160px 23px rgba(0, 0, 0, 0.8), 5px 35px 191px -43px rgba(255, 0, 255, 0.5);
+    box-shadow: inset 10px -88px 160px 23px rgba(0, 0, 0, 0.8), 5px 35px 191px -43px rgba(38, 0, 255, 0.7);
     margin-bottom: 50px;
   }
   
@@ -93,7 +95,7 @@
     width: 100%;
     text-align: center;
     padding: 5px;
-    background: rgba(255, 228, 240, 1);
+    background: rgba(174, 74, 255, 0.7);
     color: #444;
     cursor: pointer;
     outline: 1px solid rgba(136, 14, 79, 0.1);
@@ -106,12 +108,12 @@
   }
   
   .cb:hover {
-    box-shadow: 10px 10px 18px -6px rgba(233, 30, 99, 0.5);
+    box-shadow: 10px 10px 18px -6px rgba(140, 0, 255, 0.5);
     z-index: 1000;
   }
   
   .cb:active {
-    box-shadow: inset 10px 10px 18px -6px rgba(233, 30, 99, 0.5);
+    box-shadow: inset 10px 10px 18px -6px rgba(140, 0, 255, 0.5);
   }
   
   .screentext {
@@ -146,18 +148,18 @@
   }
   
   .lighter {
-    background-color: rgba(255, 235, 238, 1);
+    background-color: rgb(247, 235, 255);
     font-size: 1.2em;
   }
   
   .operands {
-    background-color: rgba(255, 155, 160, 1);
+    background-color: rgb(225, 180, 255);
     color: #eee;
     font-size: 1.6em;
   }
   
   .enter {
-    background-color: rgba(254, 111, 118, 1);
+    background-color: rgba(174, 74, 255, 0.7);
     color: #eee;
     font-size: 2em;
   }
